[WIP] Returning solver handler results for recording